--- a/hash/.vscode/settings.json
+++ b/hash/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "data.h": "c",
+        "vector.h": "c",
+        "utils.h": "c",
+        "hash.h": "c"
     }
 }
